--- a/CV-Hemsida/school.html
+++ b/CV-Hemsida/school.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css2">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min CV</title>
 </head>
+
 <body>
-   
-  <h1> Hallå där </h1>
 
 
+
+
+    
 </body>
-</html>
-
