--- a/CV-Hemsida/landingpage.html
+++ b/CV-Hemsida/landingpage.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="landingpage.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Min CV</title>
+    <title>Hem</title>
 </head>
 <body>
   <div> 
