--- a/CV-Hemsida/landingpage.html
+++ b/CV-Hemsida/landingpage.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div> 
-    <a  class="länkar-1" href="http://127.0.0.1:5500/Webb1/school.html">Om skolan</a>
-    <a  class="länkar-1" href="http://127.0.0.1:5500/Webb1/courses.html">Kurser</a>
-    <a  class="länkar-1" href="http://127.0.0.1:5500/CV-Hemsida/interests.html">Fritidsintressen</a>
-    <a  class="länkar-1" href="http://127.0.0.1:5500/CV-Hemsida/me.html">Om mig</a>
+    <a  class="länkar-1" href="school.html">Om skolan</a>
+    <a  class="länkar-1" href="courses.html">Kurser</a>
+    <a  class="länkar-1" href="interests.html">Fritidsintressen</a>
+    <a  class="länkar-1" href="me.html">Om mig</a>
   </div>
 
   <div>
