--- a/CV-Hemsida/CV - html/courses.html
+++ b/CV-Hemsida/CV - html/courses.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="courses.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Om skolan</title>
+    <title>Kurser</title>
 </head>
 
 <body>
