--- a/CV-Hemsida/CV - html/homepage.html
+++ b/CV-Hemsida/CV - html/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="landingpage.css">
+    <link rel="stylesheet" href="homepage.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hem</title>
