--- a/CV-Hemsida/CV - html/me.html
+++ b/CV-Hemsida/CV - html/me.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="me.css">
+    <link rel="stylesheet" href="../CV - css/me.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om mig</title>
@@ -12,5 +12,5 @@
     <a  class="länkar-1" href="school.html">Om skolan</a>
     <a  class="länkar-1" href="courses.html">Kurser</a>
     <a  class="länkar-1" href="interests.html">Fritidsintressen</a>
-    <a  class="länkar-1" href="landingpage.html">Hem</a>
+    <a  class="länkar-1" href="homepage.html">Hem</a>
   </div>
