--- a/CV-Hemsida/CV - html/school.html
+++ b/CV-Hemsida/CV - html/school.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-
+    <div> 
+        <a  class="länkar-1" href="homepage.html">Hem</a>
+        <a  class="länkar-1" href="courses.html">Kurser</a>
+        <a  class="länkar-1" href="interests.html">Fritidsintressen</a>
+        <a  class="länkar-1" href="me.html">Om mig</a>
+    </div>
 
 
 
