--- a/CV-Hemsida/CV - html/courses.html
+++ b/CV-Hemsida/CV - html/courses.html
@@ -15,6 +15,9 @@
         <a  class="länkar-1" href="interests.html">Fritidsintressen</a>
         <a  class="länkar-1" href="homepage.html">Hem</a>
     </div>
+    <div>
+        <img class="img-1" src="https://scx1.b-cdn.net/csz/news/800/2019/howtoovercom.jpg">
+    </div>
 
 
     
